--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:padding="1dp"
+            android:clickable="true"
+            android:id="@+id/topbar">
 
             <ImageView
                 android:layout_width="wrap_content"
