--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/mainholder">
+    android:id="@+id/mainholder"
+    android:background="#ffffffff">
 
     <LinearLayout
         android:orientation="vertical"
@@ -35,7 +36,8 @@
                 android:id="@+id/imageView"
                 android:src="@drawable/layer_logo_app"
                 android:visibility="visible"
-                android:layout_weight="0.17" />
+                android:layout_weight="0.17"
+                android:layout_margin="5dp" />
         </LinearLayout>
 
         <ScrollView
